examples/core/src/main/java/org/jbehave/examples/core/stories/failing/GivenNonSuccessful.java
package org.jbehave.examples.core.stories.failing;

import org.jbehave.examples.core.CoreStory;

public class GivenNonSuccessful extends CoreStory {

}